--- a/index (1).html
+++ b/index (1).html
@@ -1,86 +1,84 @@
 <html>
 	<head>
-	     <title> ARIZONE </title>
+	     <img src="img/arizone2.png" width="20%">
 	     <link rel="stylesheet" href="styles/estilo.css">
+
 	</head>
 	<body>
-
-		<h2>Arizone</h2>
 		<ul>
 		  <li><a href="index.html"> Novedades </a></li>
-		  <li><a href="index (1).html">Top10 </a></li>
-		  <li><a href="index (2).html"> Música </a></li>
-		  <li><a href="index (3).html"> Youtube </a></li>
+		  <li><a href="index (1).html">Top10 Mundial </a></li>
+		  <li><a href="index (2).html"> RadioFm </a></li>
+		  <li><a href="index (3).html"> Conciertos </a></li>
 		</ul>
 		<div>
-			<img src="https://archivos.fnartes.gob.ar/cms/2019/10/02/WEB%201440%20concurso%20musica%20jjpaz.jpg" alt="nota" height="260x" width="990px">
+			<img src="https://archivos.fnartes.gob.ar/cms/2019/10/02/WEB%201440%20concurso%20musica%20jjpaz.jpg" alt="nota" height="260x" width="1064px">
 		</div>
-
-
-		<div class="videos">
-			<div class="video" style="background-color: #FEF8F8;text-align: center;">
-			 	<iframe width="500px" height="400px" src="https://www.youtube.com/embed/c_4DUcfE1sU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-			</div>
-
-		
 			
+		<div class="videos">
+	
 			<div class="video">
-			 	<iframe width="300px" height="200px" src="https://www.youtube.com/embed/SxGLPVvNjvY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			 	<img src="img/descarga.gif" height="70px">
+			 	<iframe width="300px" height="200px" src="https://www.youtube.com/embed/q0hyYWKXF0Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			 	<h1>1.</h1>
+			 	<img src="img/flechaverde.png" height="100px">
 			 </div>
 
 			<div class="video">
 			 	<iframe width="300px" height="200px" src="https://www.youtube.com/embed/VNtRpDhUXUA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			 	<img src="img/descarga2.png" height="100px">
+			 	<h1>2.</h1>
+			 	<img src="img/flecharoja.png" height="100px">
 			 </div>
 
 			<div class="video">
 			 	<iframe width="300px" height="200px" src="https://www.youtube.com/embed/SvO3jKeBCRM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			 	<img src="img/descarga2.png" height="100px">
+			 	<h1>3.</h1>
+			 	<img src="img/flecharoja.png" height="100px">
 			</div>
 
 			<div class="video">
-			 	<iframe width="300px" height="200px" src="https://www.youtube.com/embed/q0hyYWKXF0Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			 	<img src="img/descarga.gif" height="70px">
+			 	<iframe width="300px" height="200px" src="https://www.youtube.com/embed/PsTpJH20VlM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			 	<h1>4.</h1>
+			 	<img src="img/flechaverde.png" height="100px">
 		 	</div>
 
 		 	<div class="video">
 			 	<iframe width="300px" height="200px" src="https://www.youtube.com/embed/mj0XInqZMHY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			 	<img src="img/descarga.gif" height="70px">
+			 	<h1>5.</h1>
+			 	<img src="img/flechaverde.png" height="100px">
 		 	</div>
 
 		 	<div class="video">
 			 	<iframe width="300px" height="200px" src="https://www.youtube.com/embed/kBNt8hYvn8A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			 	<img src="img/descarga.gif" height="70px">
+			 	<h1>6.</h1>
+			 	<img src="img/flechaverde.png" height="100px">
 		 	</div>
 
 		 	<div class="video">
 			 	<iframe width="300px" height="200px" src="https://www.youtube.com/embed/IPXIgEAGe4U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			 	<img src="img/descarga.gif" height="70px">
+			 	<h1>7.</h1>
+			 	<img src="img/flechaverde.png" height="100px">
 			</div>
 
 			<div class="video">
 			 	<iframe width="300px" height="200px" src="https://www.youtube.com/embed/F1m5juTGAjY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			 	<img src="img/descarga.gif" height="70px">
+			 	<h1>8.</h1>
+			 	<img src="img/flechaverde.png" height="100px">
 			</div>
 
 			<div class="video">
 			 	<iframe width="300px" height="200px" src="https://www.youtube.com/embed/tbneQDc2H3I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			 	<img src="img/descarga2.png" height="100px">
+			 	<h1>9.</h1>
+			 	<img src="img/flecharoja.png" height="100px">
 			</div>
 
 			<div class="video">
 			 	<iframe width="300px" height="200px" src="https://www.youtube.com/embed/8Mq35AAJT1w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			 	<img src="img/descarga2.png" height="100px">
+			 	<h1>10.</h1>
+			 	<img src="img/flecharoja.png" height="100px">
 			</div>
 
 
 		</div>
-	     <p> Novedades </p>
-	     <table>
-	     	
-	     </table>
 
 	</body>
 </html>
